Revert fields migrations, keep the `SamlProperty` extension point
Added `RelayStateMapper` optional interface to integrate with `RefererStateGenerator` final redirection.